Make compatible with 1.12f and 1.30
Additionally, fix oCInfo retrieval

--- a/Workaround.vm
+++ b/Workaround.vm
@@ -1,5 +1,5 @@
 [BEGINVDF]
-Comment=Workaround patch for Gothic and Gothic 2 NotR%%NThis patch provides various workarounds for story bugs in mods. See readme.
+Comment=Workaround patch for Gothic, Gothic Sequel, Gothic 2, and Gothic 2 NotR%%NThis patch provides various workarounds for story bugs in mods. See readme.
 BaseDir=.\
 VDFName=.\Workaround.vdf
 
